<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="pref_sort_label">Sort By</string>
    <string name="pref_sort_key">sort_option</string>
    <string-array name="pref_sort_option_labels">
        <item>Most Popular</item>
        <!--<item>Most Popular by Highest Rating</item>-->
        <item>Highest Rated by Total votes</item>
        <item>Highest Rated by Average vote</item>
    </string-array>
    <string-array name="pref_sort_option_values">
        <item>popularity.desc</item>
        <!--<item>local_sort</item>-->
        <item>vote_count.desc</item>
        <item>vote_average.desc</item>
    </string-array>

    <string-array name="sort_option_labels">
        <item>Most Popular</item>
        <item>Top Rated</item>
        <item>My Favorites</item>
    </string-array>

    <string-array name="sort_option_values">
        <item>popularity.desc</item>
        <item>vote_count.desc</item>
        <item>vote_average.desc</item>
    </string-array>


    <string name="pref_sort_option_default">popularity.desc</string>
    <string name="detail_card_rating_label">Rating</string>
    <string name="detail_card_overview_label">Overview</string>
    <string name="detail_card_release_date_label">Release Date</string>
    <string name="detail_card_popularity_label">Popularity</string>
    <string name="detail_card_poster_label">Poster</string>
    <string name="detail_card_movie_poster_content_desc">Movie Poster</string>
    <string name="detail_header_backdrop_content_desc">Movie Backdrop</string>
    <string name="pref_creator_me">pref_creator_me</string>
    <string name="pref_creator_me_value">Created by Jaison Brooks</string>
    <string name="error_message">There was an Error :/</string>
</resources>
